testing/tests/ui/enum.stderr
error: template attribute `rinja` can only be used on the `enum`, not its variants
 --> tests/ui/enum.rs:5:43
  |
5 |     #[template(ext = "txt", source = "ðŸ«¨", rinja = rinja)]
  |                                            ^^^^^

error: template attribute `rinja` can only be used on the `enum`, not its variants
  --> tests/ui/enum.rs:11:43
   |
11 |     #[template(ext = "txt", source = "ðŸ«", rinja = rinja)]
   |                                            ^^^^^

error: template attribute `rinja` can only be used on the `enum`, not its variants
  --> tests/ui/enum.rs:20:43
   |
20 |     #[template(ext = "txt", source = "ðŸª»", rinja = rinja)]
   |                                            ^^^^^

error: template attribute `rinja` can only be used on the `enum`, not its variants
  --> tests/ui/enum.rs:27:43
   |
27 |     #[template(ext = "txt", source = "ðŸ« ", rinja = rinja)]
   |                                            ^^^^^
